2012-07-28  Per Bothner  <per@bothner.com>

	* Declaration.java (inExternalModule): New method.
	(maybeIndirectBinding): Use it.
	* FindTailCalls.java (visitApplyExp): Likewise.
	* PushApply.java (visitApplyExp): Likewise.
	This fixes Savannah bug #36917 "Memory leak".

	* FindCapturedVars.java (visitApplyExp): Use addCaller method.

2012-07-16  Per Bothner  <per@bothner.com>

	* PrimProcedure.java: Better expansion of parameterized methods.
	(resolveTypeVariables): New method.
	This fixes Savanna bug #36853 "Propagate type parameters".

2012-07-01  Per Bothner  <per@bothner.com>

	* Declaration.java (PROCEDURE): Make public.

2012-06-26  Per Bothner  <per@bothner.com>

	* AbstractScriptEngineFactory.java (class BindingsLocation): Update
	for Location being made generic.

	* ReferenceExp.java (calculateType): Fix non-fully-resolved-alias case.

2012-06-25  Per Bothner  <per@bothner.com>

	* ModuleExp.java (INTERACTIVE): New flag.
	* Language.java (parse): Maybe set INTERACTIVE flag on module
	* Declaration.java (makeField): Check INTERACTIVE flag rather than
	IMMEDIATE flag to decide if setIndirectBinding.

2012-06-19  Per Bothner  <per@bothner.com>

	* PushApply.java (visitIfExp): Rewrite Let or Begin in test of IfExp.
	This allows better folding of booleans.
	* IfExp.java (compile): Don't compile then_clause or else_clause
	if not transferred to.

2012-06-13  Per Bothner  <per@bothner.com>

	* LambdaExp.java (compileEnd, allocChildMethods): Don't generate
	method for unused function.  This fixes Savannah bug#36413
	"Unused function in module".

2012-06-10  Per Bothner  <per@bothner.com>

	* Compilation.java (letDone): Fix thinko.

2012-06-06  Per Bothner  <per@bothner.com>

	* ProcInitializer.java (compile): Only re-bind old binding if
	new binding is module-level.

2012-05-31  Per Bothner  <per@bothner.com>

	* ChainLambdas.java (visitApplyExp): Fix off-by-one bug in
	unreachable-code case.

2012-05-24  Jamison Hope  <jrh@theptrgroup.com>
